DESVAR/castor_c1_2330_2336_debug.txt
  File "ClusterEmcee2_linear_mu_all_and_single_fast.py", line 938
    print(f"Row {ROW} ran in {toc - tic:0.4f} seconds")
                                                     ^
SyntaxError: invalid syntax
